--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/dongdong12138/resume-flex/issues"
   },
-  "homepage": "https://github.com/dongdong12138/resume-flex#readme"
+  "homepage": "https://github.com/dongdong12138/resume-flex#readme",
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
